# calendar

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_booking_idempotency.py
backend/app/: main.py
backend/app/api/: deps.py  responses.py
backend/app/api/routes/: auth.py  bookings.py  event_types.py  me.py  schedules.py  share_links.py  slots.py
backend/app/application/: __init__.py  bookings.py  event_types.py  events.py  schedules.py  share_links.py  slots.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/domain/: __init__.py  calendar.py
backend/app/schemas/: contracts.py
backend/app/services/: calendar.py  mappers.py  rate_limit.py
backend/scripts/: dev.py  seed.py
backend/tests/: conftest.py  factories.py  support.py  test_booking_creation.py  test_booking_events.py  test_booking_filters.py  test_booking_rate_limit.py  test_domain_calendar.py  test_event_types_crud.py  test_health.py  test_public_cancel.py  test_public_share_links.py  test_public_user_page.py  test_schedule_management.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
prisma/: schema.prisma  seed.mjs
scripts/: dev.mjs  mock-api.mjs  serve-api-docs.mjs  setup-mock-db.mjs
spec/: main.tsp  package-lock.json  package.json  tspconfig.yaml
src/: App.tsx  api.ts  (+2 more)
(+53 files in other folders)
